# azure-functions-rust-ga

./: chart-index.html  index.html  package.json
js-tsp-ga/: function.json  index.js  local.js
rs-tsp-ga/: function.json  index.js  local.js  wasm_tspsolver.d.ts  wasm_tspsolver.js  wasm_tspsolver_bg.js  wasm_tspsolver_bg.wasm
rust-tspsolver/: Cargo.toml  wasm.build.sh
rust-tspsolver/src/: lib.rs
