[package]
name = "wasm-tspsolver"
version = "0.1.0"
authors = ["Claus Matzinger <claus.matzinger+kb@gmail.com>"]

[lib] 
crate-type = ["cdylib"] 

[dependencies] 
wasm-bindgen = "^0.2"
rsgenetic = { path = "../../RsGenetic" }
rand = { git = "https://github.com/rust-lang-nursery/rand.git", features=["wasm-bindgen"] }