[package]
name = "wasm-tspsolver"
version = "0.1.0"
authors = ["Claus Matzinger <claus.matzinger+kb@gmail.com>"]
edition = "2018"

[lib] 
crate-type = ["cdylib"] 

[dependencies] 
wasm-bindgen = "^0.2.25"
rsgenetic = { path = "../../RsGenetic" }
js-sys = "^0.3.2"
#rand = { git = "https://github.com/rust-lang-nursery/rand.git", features=["wasm-bindgen"] }
rand = "0.5.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"